src/objects/Service_Organization_Controls__c.object
<CustomObject>
    <fields>
        <fullName>Control_Number__c</fullName>
        <label>Control Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Control_Objective_Relevant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Control Objective Relevant?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Control_Objective__c</fullName>
        <label>Control Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Exception_Noted__c</fullName>
        <label>Description of Exception Noted</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception_Noted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exception Noted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Explanation_if_not_Relevant__c</fullName>
        <label>Explanation if not Relevant?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSAE_16_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SSAE-16 Review</label>
        <referenceTo>SSAE_16_Review__c</referenceTo>
        <relationshipLabel>Service Organization Controls</relationshipLabel>
        <relationshipName>Service_Organization_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Organization_Management_Response__c</fullName>
        <label>Service Organization Management Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Testing_Perfomed__c</fullName>
        <label>Testing Perfomed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Service Organization Control</label>
    <nameField>
        <label>Service Organization Controls Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Organization Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>